--- a/www/index.html
+++ b/www/index.html
@@ -18,7 +18,7 @@
     <script src="js/app.js"></script>
     <script src="js/app.routes.js"></script>
   </head>
-  <body ng-app="starter">
+  <body ng-app="app">
     <ion-pane>
       <ion-header-bar class="bar-stable">
         <h1 class="title">Ionic Blank Starter</h1>
