--- a/www/index.html
+++ b/www/index.html
@@ -18,6 +18,8 @@
     <script src="js/app.js"></script>
     <script src="js/app.routes.js"></script>
     <script src="js/controllers/sideMenuCtrl.js"></script>
+    <script src="js/controllers/LoginCtrl.js"></script>
+    <script src="js/services/loginService.js"></script>
   </head>
   <body ng-app="app">
     <ion-nav-view></ion-nav-view>
