--- a/www/index.html
+++ b/www/index.html
@@ -17,6 +17,8 @@
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/app.routes.js"></script>
+    <script src="js/controllers/LoginCtrl.js"></script>
+    <script src="js/services/loginService.js"></script>
   </head>
   <body ng-app="app">
     <ion-nav-view></ion-nav-view>
