--- a/www/index.html
+++ b/www/index.html
@@ -22,6 +22,11 @@
     <script src="js/services/loginService.js"></script>
   </head>
   <body ng-app="app">
+    <ion-nav-bar class="bar-balanced">
+      <ion-nav-title>
+        <img src="img/header-logo.jpg" />
+      </ion-nav-title>
+    </ion-nav-bar>
     <ion-nav-view></ion-nav-view>
   </body>
 </html>
