--- a/www/index.html
+++ b/www/index.html
@@ -19,7 +19,10 @@
     <script src="js/app.routes.js"></script>
     <script src="js/controllers/sideMenuCtrl.js"></script>
     <script src="js/controllers/LoginCtrl.js"></script>
+    <script src="js/controllers/DonorCtrl.js"></script>
     <script src="js/services/loginService.js"></script>
+    <script src="js/services/donorService.js"></script>
+    <script src="js/services/userService.js"></script>
   </head>
   <body ng-app="app">
     <ion-nav-view></ion-nav-view>
