--- a/www/index.html
+++ b/www/index.html
@@ -12,17 +12,23 @@
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
+    <script src="lib/ngCordova/dist/ng-cordova.js"></script>
     <script src="cordova.js"></script>
+
+    <script src="/lib/lodash/dist/lodash.js"></script>
+    <script src="/lib/angular-google-maps/dist/angular-google-maps.js"></script>
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/app.routes.js"></script>
     <script src="js/controllers/SideMenuCtrl.js"></script>
     <script src="js/controllers/LoginCtrl.js"></script>
+    <script src="js/controllers/DriverListCtrl.js"></script>
     <script src="js/controllers/DonorCtrl.js"></script>
     <script src="js/services/loginService.js"></script>
     <script src="js/services/donorService.js"></script>
     <script src="js/services/userService.js"></script>
+    <script src="js/factories/tokenAppendingInterceptor.js"></script>
   </head>
   <body ng-app="app">
     <ion-nav-view></ion-nav-view>
