Adding driver service

--- a/www/index.html
+++ b/www/index.html
@@ -28,6 +28,7 @@
     <script src="js/services/loginService.js"></script>
     <script src="js/services/donorService.js"></script>
     <script src="js/services/userService.js"></script>
+    <script src="js/services/driverService.js"></script>
     <script src="js/factories/tokenAppendingInterceptor.js"></script>
   </head>
   <body ng-app="app">
