--- a/www/index.html
+++ b/www/index.html
@@ -24,6 +24,7 @@
     <script src="js/controllers/SideMenuCtrl.js"></script>
     <script src="js/controllers/LoginCtrl.js"></script>
     <script src="js/controllers/DriverListCtrl.js"></script>
+    <script src="js/controllers/DriverRegCtrl.js"></script>
     <script src="js/controllers/DonorCtrl.js"></script>
     <script src="js/services/loginService.js"></script>
     <script src="js/services/donorService.js"></script>
