--- a/www/index.html
+++ b/www/index.html
@@ -15,8 +15,8 @@
     <script src="lib/ngCordova/dist/ng-cordova.js"></script>
     <script src="cordova.js"></script>
 
-    <script src="/lib/lodash/dist/lodash.js"></script>
-    <script src="/lib/angular-google-maps/dist/angular-google-maps.js"></script>
+    <script src="lib/lodash/dist/lodash.js"></script>
+    <script src="lib/angular-google-maps/dist/angular-google-maps.js"></script>
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
