--- a/www/index.html
+++ b/www/index.html
@@ -29,6 +29,7 @@
     <script src="js/controllers/DonorCtrl.js"></script>
     <script src="js/controllers/ProfileCtrl.js"></script>
     <script src="js/controllers/ProfileNameCtrl.js"></script>
+    <script src="js/controllers/ProfileContactInfoCtrl.js"></script>
     <script src="js/services/loginService.js"></script>
     <script src="js/services/donorService.js"></script>
     <script src="js/services/userService.js"></script>
