registration for all three roles

--- a/www/index.html
+++ b/www/index.html
@@ -26,15 +26,18 @@
     <script src="js/controllers/DriverListCtrl.js"></script>
     <script src="js/controllers/DriverRegCtrl.js"></script>
     <script src="js/controllers/DriverListDetailCtrl.js"></script>
+    <script src="js/controllers/DonorRegCtrl.js"></script>
     <script src="js/controllers/DonationCtrl.js"></script>
     <script src="js/controllers/DonationListCtrl.js"></script>
     <script src="js/controllers/ProfileCtrl.js"></script>
     <script src="js/controllers/ProfileNameCtrl.js"></script>
     <script src="js/controllers/ProfileContactInfoCtrl.js"></script>
     <script src="js/controllers/ProfileVehicleInfoCtrl.js"></script>
+    <script src="js/controllers/RecipientRegCtrl.js"></script>
     <script src="js/services/loginService.js"></script>
     <script src="js/services/donorService.js"></script>
     <script src="js/services/userService.js"></script>
+    <script src="js/services/userRegService.js"></script>
     <script src="js/services/driverService.js"></script>
     <script src="js/factories/tokenAppendingInterceptor.js"></script>
   </head>
