initial handshake stuff

--- a/www/index.html
+++ b/www/index.html
@@ -27,6 +27,7 @@
     <script src="js/controllers/sideMenuCtrl.js"></script>
     <script src="js/controllers/LoginCtrl.js"></script>
     <script src="js/controllers/DriverListCtrl.js"></script>
+    <script src="js/controllers/DriverCurrentDeliveryCtrl.js"></script>
     <script src="js/controllers/DriverRegCtrl.js"></script>
     <script src="js/controllers/DriverListDetailCtrl.js"></script>
     <script src="js/controllers/DonorRegCtrl.js"></script>
