trying to clean up user registration

--- a/www/index.html
+++ b/www/index.html
@@ -44,6 +44,7 @@
     <script src="js/services/userService.js"></script>
     <script src="js/services/userRegService.js"></script>
     <script src="js/services/driverService.js"></script>
+    <script src="js/services/recipientService.js"></script>
     <script src="js/factories/tokenAppendingInterceptor.js"></script>
   </head>
   <body ng-app="app">
